# psi

./: .gitignore  .travis.yml  Cargo.toml  README.md  Vagrantfile
examples/: psi-killer.rs
psi/: Cargo.toml
psi-killer/: Cargo.toml  README.md
psi-killer/src/: main.rs
psi-killer/src/memory/: mod.rs  sysrq.rs
psi/src/: error.rs  lib.rs  monitor.rs  psi.rs  trigger.rs
src/: error.rs  lib.rs  monitor.rs  psi.rs  trigger.rs
