[package]
name = "psi"
version = "0.1.0"
authors = ["Chris Manning <cmanning999@gmail.com>"]
edition = "2018"
categories = ["os", "os::unix-apis"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/chrismanning/psi"
homepage = "https://github.com/chrismanning/psi"
description = "Linux Pressure Stall Information (PSI) for Rust"

[dependencies]
epoll = "4.1.0"
log = "0.4"

[dev-dependencies]
simplelog = "0.7.1"
