[package]
name = "psi-killer"
version = "0.1.0"
authors = ["Chris Manning <cmanning999@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/chrismanning/psi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psi = { path = "../psi" }
log = "0.4.8"
simplelog = "0.7.1"
