[package]
name = "psi"
version = "0.1.0"
authors = ["Chris Manning <cmanning999@gmail.com>"]
edition = "2018"
categories = ["os", "os::unix-apis", "memory-management"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoll = "4.1.0"
log = "0.4"
